% subscript and superscript
\newcommand{\s}{\ifelse{latex}{\eqn{_{#1}}}{\ifelse{html}{\out{<sub>#1</sub>}}{#1}}}
\newcommand{\S}{\ifelse{latex}{\eqn{^{#1}}}{\ifelse{html}{\out{<sup>#1</sup>}}{^#1}}}
% links to vignettes 20220723
\newcommand{\viglink}{\ifelse{html}{\out{<a href="../CHNOSZ/doc/#1.html"><strong>#1.Rmd</strong></a>}}{\bold{#1.Rmd}}}

\section{Changes in CHNOSZ version 2.0.0-19 (2023-08-09)}{

    \itemize{

      \item Add FAQ vignette.

      \item Restore \file{EOSregress.R}, \file{eos-regress.Rmd}, and
      \file{demo/adenine.R}.

      \item Add \code{use.polymorphs} argument to \code{subcrt()} to allow
      turning off automatic identification of stable polymorphs.

      \item Rename \code{checkGHS()} and \code{checkEOS()} to
      \code{check.GHS()} and \code{check.EOS()} and make
      \code{return.difference} TRUE by default.

      \item Where the changing basis species include one of the axis variables
      on a diagram, \code{mosaic()} now calls \code{affinity()} with the
      appropriate argument names for basis species and adjusts the labels for
      the diagram (\dQuote{total C}, \dQuote{total S}, etc.).

    }

}


\section{Changes in CHNOSZ version 2.0.0 (2023-03-13)}{

  \subsection{MAJOR USER-VISIBLE CHANGES}{
    \itemize{

      \item Units of Joules instead of calories are now used by default for the
      thermodynamic properties output by \code{subcrt()}. That is,
      \code{E.units("J")} is the default setting. Scripts that implicitly
      depend on the previous default setting of \code{E.units("cal")} may need
      to be modified to produce expected output.

      \item A \code{model} column has been added to the OBIGT thermodynamic
      database. This specifies the model for calculating standard thermodynamic
      properties. Currently available models are \samp{H2O} (water), \samp{HKF}
      (revised Helgeson-Kirkham-Flowers model for aqueous species), \samp{CGL}