@@ -1,6 +1,6 @@
-Date: 2023-08-09
+Date: 2023-08-22
 Package: CHNOSZ
-Version: 2.0.0-19
+Version: 2.0.0-20
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
